# btc-market-maker

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/: order_book.h
cpp/src/: order_book.cpp
docs/: DESIGN.md  sample_output.txt
scripts/: benchmark_book_only.py  benchmark_orderbook_backends.py
src/: config.py  main.py  types.py
src/fair_value/: fair_value.py
src/ingestion/: base.py  binance.py  coinbase.py  runner.py
src/orderbook/: book.py  factory.py  manager.py  native.py
src/output/: printer.py
src/quoting/: fair_value.py  quote_engine.py
src/utils/: logging.py  time.py
tests/: test_binance_connector.py  test_fair_value.py  test_manager.py  test_orderbook.py  test_orderbook_backend_equivalence.py  test_quote_engine.py
